--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,30 @@
 name: Deploy Library Backend
-
 on:
   push:
     branches: [ main ]
-
 jobs:
   deploy:
     runs-on: self-hosted
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-
     - name: Deploy to VPS
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
         SSH_HOST: ${{ secrets.SSH_HOST }}
         SSH_USER: ${{ secrets.SSH_USER }}
       run: |
-        # SSH kalitini vaqtinchalik faylga yozish
         echo "$SSH_PRIVATE_KEY" > ssh_key
         chmod 600 ssh_key
-
-        # VPS ga ulanish va buyruqlarni bajarish
         ssh -o StrictHostKeyChecking=no -i ssh_key $SSH_USER@$SSH_HOST << 'EOF'
-          cd ~/library/library_project
+          echo "Starting deployment at $(date)"
+          cd /root/library/library_project  # To‘g‘ri yo‘l
+          echo "Pulling code at $(date)"
           git pull origin main
+          echo "Installing dependencies at $(date)"
           npm install
+          echo "Restarting PM2 at $(date)"
           pm2 restart library
+          echo "Deployment finished at $(date)"
         EOF
-
-        # Vaqtinchalik kalit faylini o‘chirish
         rm ssh_key
