--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,31 +4,24 @@ on:
   push:
     branches:
       - main  # yoki master
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: self-hosted
 
     steps:
-    - name: Checkout repo
+    - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Copy files to VPS with rsync
-      uses: burnett01/rsync-deployments@5.2
-      with:
-        switches: -avzr --delete
-        path: .
-        remote_path: /home/express/app
-        remote_host: ${{ secrets.VPS_HOST }}
-        remote_user: ${{ secrets.VPS_USER }}
-        remote_key: ${{ secrets.VPS_SSH_KEY }}
-
-    - name: Build and restart Docker container
+    - name: Copy project to VPS via rsync
       run: |
-        ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
-        cd /home/express/app
-        docker stop my-express-app || true
-        docker rm my-express-app || true
-        docker build -t my-express-app .
-        docker run -d -p 4000:4000 --env-file .env --name my-express-app my-express-app
+        rsync -avz -e "ssh -o StrictHostKeyChecking=no" ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:/home/${{ secrets.VPS_USER }}/library
+
+    - name: Restart Docker container on VPS
+      run: |
+        ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
+          cd /home/${{ secrets.VPS_USER }}/library
+          docker compose down
+          docker compose up -d --build
         EOF
